updated to display status indicators for new and updated assets

--- a/ui.apps/src/main/content/jcr_root/apps/sample-assetshare/components/search/list/templates/list.html
+++ b/ui.apps/src/main/content/jcr_root/apps/sample-assetshare/components/search/list/templates/list.html
@@ -42,7 +42,11 @@
 		<td class="image">
 			<a href="${assetDetails.url @ suffix = asset.path}"><img src="${asset.properties['thumbnail'] || properties['missingImage'] @ context = 'attribute'}" alt="${asset.properties['title']}"/></a>
 		</td>
-        <td>${asset.properties['assetStatus']}</td>
+        <td><div data-sly-test.status="${asset.properties['assetStatus']}"
+        		class="ui status ${status}status label">
+        		${status @ i18n}
+        	</div>
+        </td>
 		<td class="header">
 			<a href="${assetDetails.url @ suffix = asset.path}">${asset.properties['title']}</a>
 		</td>
