--- a/ui.apps/src/main/content/jcr_root/apps/sample-assetshare/components/search/card/templates/card.html
+++ b/ui.apps/src/main/content/jcr_root/apps/sample-assetshare/components/search/card/templates/card.html
@@ -25,13 +25,14 @@
             data-asset-share-asset="${asset.path}"
             id="${asset.path}"
             class="ui card cmp-card">
-
+		
         <a class="image cmp-image__wrapper--card" href="${assetDetails.url @ suffix = asset.path}">
             <img src="${asset.properties['thumbnail'] || properties['missingImage'] @ context = 'attribute'}"
                  class="cmp-image--card"
                  alt="${asset.properties['title']}"/>
         </a>
-		<div class="floating ui red label">${asset.properties['assetStatus'] @ i18n}</div>
+        <div data-sly-test.status="${asset.properties['assetStatus']}" 
+		     class="ui top right attached status ${status}status label">${status @ i18n}</div>
         <div class="content">
             <h3 class="header">
                 <a href="${assetDetails.url @ suffix = asset.path}">
